# librouteros

./: .bumpversion.cfg  .gitattributes  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  Pipfile  README.md  README.rst  apicli.py  example.py  pyproject.toml  requirements-dev.txt  requirements.tests.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  upload.sh  versioning.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml  test.yml
docker/: 3.10.dockerfile  3.11.dockerfile  3.12.dockerfile  3.6.dockerfile  3.7.dockerfile  3.8.dockerfile  3.9.dockerfile  do.sh
docs/: .gitignore  Makefile  analysis.rst  api_analysis.rst  conf.py  connect.rst  contributing.rst  index.rst  intro.rst  introduction.rst  lic.rst  license.rst  path.rst  query.rst  tutorial.rst  usage.rst
docs/_static/: custom.css
images/: README.md  routeros_6.33.3.qcow2  routeros_6.43rc21.qcow2  routeros_6.44.5.qcow2
librouteros/: __init__.py  api.py  connections.py  datastructures.py  drivers.py  exc.py  exceptions.py  extras.py  login.py  protocol.py  query.py  types.py
rosapi/: __init__.py  _exceptions.py  _rosapi.py  api.py  connections.py  drivers.py  exc.py  facade.py  query.py  responses.py  sentences.py  words.py
src/librouteros/: __init__.py  api.py  connections.py  exceptions.py  login.py  protocol.py  query.py  types.py
tests/: helpers.py  test_api.py  test_connections.py  test_datastructures.py  test_extras.py  test_librouteros.py
tests/integration/: __init__.py  conftest.py  test_general.py  test_generator.py  test_path.py  test_proxy.py
tests/integration/async/: conftest.py  test_general.py  test_generator.py  test_path.py
tests/requirements/: conftest.py  test_requirements.py
tests/unit/: conftest.py  test_api.py  test_connections.py  test_exceptions.py  test_librouteros.py  test_path.py  test_protocol.py  test_query.py
unit_tests/: api.py  connections.py  datastructures.py  drivers.py  helpers.py  librouteros.py
