[project]
name = "librouteros"
dynamic = [
  "version",
]
description = "Python implementation of MikroTik RouterOS API"
authors = [
  { name = "Åukasz Kostka", email = "lukasz.g.kostka@gmail.com" },
]
license = "GPL-2.0-or-later"
readme = "README.rst"
license-files = ["LICENSE"]
requires-python = ">=3.9.0"
keywords = [
  "mikrotik",
  "routeros",
  "api",
]

[project.urls]
Homepage = "https://github.com/luqasz/librouteros"
Issues = "https://github.com/luqasz/librouteros/issues"
Documentation = "https://librouteros.readthedocs.io"

[dependency-groups]
dev = [
  "pytest==8.*",
  "pytest-xdist==3.*",
  "mypy==1.*",
  "ruff==0.*",
  "pytest-asyncio>=0.24.0",
  "stamina>=25.1.0",
  "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { git_describe_command = "git describe" }

[tool.hatch.build.targets.sdist]
ignore-vcs = false
exclude = [
  "/.github/*",
  "/docs/*",
  "/tests/*",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
