[project]
name = "librouteros"
dynamic = [
  "version",
]
description = "Python implementation of MikroTik RouterOS API"
authors = [
  { name = "Åukasz Kostka", email = "lukasz.g.kostka@gmail.com" },
]
license = "GPL-2.0-or-later"
readme = "README.rst"
license-files = ["LICENSE"]
requires-python = ">=3.9.0"
keywords = [
  "mikrotik",
  "routeros",
  "api",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/luqasz/librouteros"
Issues = "https://github.com/luqasz/librouteros/issues"
Documentation = "https://librouteros.readthedocs.io"

[dependency-groups]
dev = [
  "pytest==8.*",
  "pytest-xdist==3.*",
  "mypy==1.*",
  "ruff==0.*",
  "pytest-asyncio>=0.24.0",
  "stamina>=25.1.0",
  "ipdb>=0.13.13",
  "hypothesis>=6.131.6",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-system"

[tool.hatch.version]
source = "vcs"
raw-options = { git_describe_command = "git describe" }

[tool.hatch.build.targets.sdist]
ignore-vcs = false
exclude = [
  "/.github/*",
  "/docs/*",
  "/tests/*",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = [
  "A",
  "ASYNC",
  "BLE",
  "B",
  "C4",
  "DTZ",
  "EXE",
  "E",
  "F",
  "I",
  "LOG",
  "N",
  "PLE",
  "PT",
  "RUF",
  "S",
  "T20",
  "W",
]
ignore = [
]
exclude = ["docs/**/*.py", "apicli.py"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "N801",
  "N802",
  "N803",
  "S101",
  "S603",
  "S311",
  "PT001",
  "PT003",
]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"
parametrize-names-type = "tuple"
